--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,13 @@
 
 <body>
   <div class="container">
-    <h1>Agentic QA</h1>
+    <h1>VGT - QA</h1>
     <div class="terminal">
       <!-- form apenas para manter estrutura sem submissão real -->
       <form id="qaForm" onsubmit="return false;">
-        <textarea id="question" placeholder="Digite sua pergunta aqui..." autocomplete="off"></textarea>
-        <button id="sendBtn" type="button">Perguntar</button>
-        <button id="resetBtn" type="button">Resetar</button>
+        <textarea id="question" placeholder="Type your question here..." autocomplete="off"></textarea>
+        <button id="sendBtn" type="button">Ask</button>
+        <button id="resetBtn" type="button">Reset</button>
       </form>
       <hr />
       <div id="response" class="response"></div>
