--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -24,7 +24,7 @@
   </div>
 
   <script>
-    const API_URL = "http://127.0.0.1:8000";
+    const API_URL = `http://${window.location.hostname}:8000/ask`;
     const loadBtn = document.getElementById("loadBtn");
     const adminKeyInput = document.getElementById("adminKey");
     const unansweredList = document.getElementById("unansweredList");
